04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svl-ingress
  namespace: svl
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: svl-tls
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svl-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: svl-api
                port:
                  number: 8000
